--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CatherineBacon/urlshortenermicro#readme",
   "dependencies": {
+    "express": "^4.14.0",
     "lodash": "^4.16.4",
     "mongodb": "^2.2.10",
     "shortid": "^2.2.6"
