--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "lodash": "^4.16.4",
     "mongodb": "^2.2.10",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "valid-url": "^1.0.9"
   }
 }
